--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mustache-express": "^1.3.0",
     "needle": "^2.4.1",
     "semver": "^7.3.2",
+    "tinydate": "^1.2.0",
     "yaml": "^1.8.2"
   },
   "devDependencies": {
@@ -65,10 +66,7 @@
     "bracketSpacing": true,
     "overrides": [
       {
-        "files": [
-          "index.js",
-          "*.js"
-        ],
+        "files": ["index.js", "*.js"],
         "options": {
           "tabWidth": 2,
           "semi": false,
@@ -76,9 +74,7 @@
         }
       },
       {
-        "files": [
-          "*.html"
-        ],
+        "files": ["*.html"],
         "options": {
           "parser": "html",
           "tabWidth": 4,
@@ -95,13 +91,7 @@
       }
     ]
   },
-  "prettierIgnore": [
-    "js/vendor*",
-    "*.min.js",
-    "*.css",
-    "assets*",
-    "fonts*"
-  ],
+  "prettierIgnore": ["js/vendor*", "*.min.js", "*.css", "assets*", "fonts*"],
   "eslintConfig": {
     "parserOptions": {
       "ecmaVersion": 2017
@@ -111,14 +101,8 @@
       "browser": true,
       "jquery": true
     },
-    "extends": [
-      "eslint:recommended",
-      "airbnb-base",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
+    "extends": ["eslint:recommended", "airbnb-base", "prettier"],
+    "plugins": ["prettier"],
     "rules": {
       "array-bracket-spacing": [
         0,
@@ -127,31 +111,14 @@
           "objectsInArrays": false
         }
       ],
-      "func-names": [
-        "off"
-      ],
-      "no-console": [
-        "warn"
-      ],
-      "no-underscore-dangle": [
-        "off"
-      ],
-      "object-curly-spacing": [
-        "warn",
-        "always"
-      ],
-      "prefer-destructuring": [
-        "off"
-      ],
-      "prettier/prettier": [
-        "warn"
-      ]
+      "func-names": ["off"],
+      "no-console": ["warn"],
+      "no-param-reassign": ["error", { "props": false }],
+      "no-underscore-dangle": ["off"],
+      "object-curly-spacing": ["warn", "always"],
+      "prefer-destructuring": ["off"],
+      "prettier/prettier": ["warn"]
     }
   },
-  "eslintIgnore": [
-    "js/vendor*",
-    "assets*",
-    "fonts*",
-    "Gruntfile.js"
-  ]
+  "eslintIgnore": ["js/vendor*", "assets*", "fonts*", "Gruntfile.js"]
 }
