--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "are.na": "^0.1.3",
     "compression": "^1.7.4",
+    "detect-libc": "^1.0.3",
     "dotenv-flow": "^3.1.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
