--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "js-yaml": "^3.13.1",
     "mustache": "^4.0.0",
     "mustache-express": "^1.3.0",
+    "needle": "^2.4.1",
+    "semver": "^7.3.2",
     "tinydate": "^1.2.0",
     "yaml": "^1.8.2"
   },
